Add a "kernel" plugin for /proc/stat statistics
see #235

--- a/etc/telegraf.conf
+++ b/etc/telegraf.conf
@@ -119,6 +119,10 @@
   # Uncomment the following line if you do not need disk serial numbers.
   # skip_serial_number = true
 
+# Get kernel statistics from /proc/stat
+[[inputs.kernel]]
+  # no configuration
+
 # Read metrics about memory usage
 [[inputs.mem]]
   # no configuration
